--- a/packages/nouns-webapp/src/components/AuctionTimer/AuctionTimer.module.css
+++ b/packages/nouns-webapp/src/components/AuctionTimer/AuctionTimer.module.css
@@ -75,7 +75,7 @@
   }
 
   .wrapper {
-    padding-left: 1.6rem;
+    padding-left: 12px;
     padding-right: 1rem;
   }
 
